# scaudit

./: .gitignore  LICENSE  README.md  config.toml  pixi.toml  pyproject.toml
docs/: provider-dependency-management.md  provider-reports-design.md  user-marker-gene-template.md
examples/pbmc3k/: README.md  expected_outputs.md  run.sh
examples/templates/: user_marker_genes.csv
product-notes/: README.md  academic-framing.md  branding.md  cli-ux.md  configuration.md  contracts.md  critical-gaps.md  design-philosophy.md  methods.md  mvp-scope.md  product-design.md  product-strategy-review.md  project-description.md  reference-management.md  report-architecture.md  roadmap.md  tooling-dependencies.md  user-workflow.md  vision.md
schemas/: annotation_card.schema.json  config.schema.json  llm_output.schema.json  reference_manifest.schema.json  reproducibility.schema.json  review_table.schema.json
src/scaudit/: __init__.py  __main__.py  cache.py  cli.py  config.py  data.py  llm.py  markers.py  references.py  rendering.py  report.py  review.py  run.py
src/scaudit/providers/: __init__.py  cellmarker.py  external_annotation.py  marker_based.py  marker_database.py  panglaodb.py  reference_mapping.py  schema.py  user_markers.py
tests/: test_cli.py
